[package]
name = "twitchy"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
typed-builder = "0.13.0"
url = "2.3.1"

[dev-dependencies]
dotenv = "0.15.0"
